# perphil

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  data.json  pyproject.toml  requirements.txt  tasks.py
.github/: copilot-instructions.md  dependabot.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_10e438d053f24245_conftest_py.html  z_10e438d053f24245_test_iterative_bench_py.html  z_10e438d053f24245_test_petsc_profiling_py.html  z_15f35ead594565b2_test_dpp_py.html  z_15f35ead594565b2_test_dpp_regressions_py.html  z_15f35ead594565b2_test_spaces_py.html  z_213220ed7de2c432_manufactured_solutions_py.html  z_213220ed7de2c432_plotting_py.html  z_213220ed7de2c432_postprocessing_py.html  z_279b7de66fbfdae6_convergence_2d_py.html  z_279b7de66fbfdae6_iterative_bench_py.html  z_279b7de66fbfdae6_petsc_profiling_3d_py.html  z_279b7de66fbfdae6_petsc_profiling_py.html  z_27e9694e1833fa94_test_parameters_py.html  z_5b76caa356d89449_dpp_py.html  z_5b76caa356d89449_spaces_py.html  z_7e2f1b760d75e56e_conditioning_py.html  z_7e2f1b760d75e56e_parameters_py.html  z_7e2f1b760d75e56e_solver_py.html  z_997b4fa83aa923a7_parameters_py.html  z_ab8eb32da68593ad_builtin_py.html  z_b6f38f20a7a6f738_test_manufactured_solutions_py.html  z_bce0e3b74f043010_test_mesh_py.html  z_e84492e644cb672c_test_conditioning_py.html  z_e84492e644cb672c_test_solver_parameters_py.html  z_e84492e644cb672c_test_solver_py.html  z_ee17298752ce47f4___init___py.html
notebooks/: 2d-convergence.ipynb  2d-convergence.py  2d_conforming_primal_comparison.ipynb  (+16 more)
(+44 files in other folders)
