[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perphil"
version = "0.1.0"
description = "Stabilized FEM to solve double porosity/permeability problems"
readme = "README.md"
keywords = ["double porosity/permeability", "finite element method"]
requires-python = ">=3.11"
license = "MIT"

authors = [
  { name = "Diego Volpatto", email = "volpatto@lncc.br" }
]

dependencies = [
  "numpy",
  "scipy",
  "notebook",
  "attrs",
  "matplotlib",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://github.com/volpatto/perphil"
Repository = "https://github.com/volpatto/perphil"
Issues = "https://github.com/volpatto/perphil/issues"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "rich",
  "invoke",
  "nb-clean",
  "jupytext",
  "ruff",
]

[tool.setuptools]
# map the “root” of all your packages to src/
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# look under src/ for any packages matching "mypackage*"
where  = ["src"]
include = ["perphil*"]
